cynic-querygen/tests/snapshots/option_tests__field_override_beats_scalar_type_override.snap
---
source: cynic-querygen/tests/option-tests.rs
expression: "generator.generate(query).expect(\"QueryGen Failed\")"
---
#[derive(cynic::QueryFragment, Debug)]
#[cynic(graphql_type = "Foo")]
pub struct MyQuery {
    pub clashes: Option<FieldNameClashes>,
}

#[derive(cynic::QueryFragment, Debug)]
pub struct FieldNameClashes {
    pub str: Option<std::collections::HashMap<String, String>>,
    pub bool: Option<bool>,
}


